# agent-recipes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  DEPLOYMENT-NEXTJS.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  Dockerfile  FEATURES_SUMMARY.md  IMMEDIATE_ACTIONS.md  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SECURITY_CHANGES.md  SECURITY_FIXES.md  SEO_IMPLEMENTATION.md  TECH_DEBT_BACKLOG.md  TEST_SUMMARY.md  docker-compose.prod.yml  docker-compose.webmanus.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_performance.py  wrangler.toml.example
.github/: FUNDING.yml
.github/workflows/: deploy.yml  security-check.yml  update-index.yml
.streamlit/: config.toml
config/: __init__.py  capability_map.py
data/: .ai_selector_budget.json  .ai_selector_cache.json  .indexer_cache.json  agents.json
docs/: HYBRID_SEARCH.md  IMPLEMENTATION_PLAN.md  P2_IMPLEMENTATION_SUMMARY.md  P2_PRODUCTION_UPGRADE_PLAN.md  SQLITE_MIGRATION.md  WEBMANUS_PLAN.md
docs/arena/: SYNTHESIS_P2_OPTIMIZATION.md  bigmodel_raw.md  gemini_raw.md
docs/genesis/: GENESIS.md  NEXTJS_ARCHITECTURE.md  NEXTJS_PRODUCTION_PLAN.md  PRD.md  arch_performance.md  arch_robustness.md  arch_simplicity.md
migrations/: 001_initial_schema.sql
nextjs-app/: .env.local.example  .gitignore  QUICKSTART.md  README.md  next.config.js  package-lock.json  package.json
nextjs-app/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
nextjs-app/app/agents/: agents-client.tsx  error.tsx  loading.tsx  page.tsx
nextjs-app/components/: agent-card.tsx  agent-grid.tsx  ai-concierge.tsx  hero-section.tsx  site-footer.tsx  site-header.tsx
nextjs-app/lib/: api.server.ts  api.ts  repo-agents.ts  utils.ts
nextjs-app/public/: _redirects
nextjs-app/types/: agent.ts
nextjs-frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  STATIC_BUILD.md  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
nextjs-frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
nextjs-frontend/components/: ConsultForm.tsx
nextjs-frontend/lib/: api.ts
scripts/: data_quality_report.py  deploy-vps.sh  migrate_to_sqlite.py  migrate_to_webmanus.py  test.sh
scripts/vps/: release.sh
src/: __init__.py  affiliate_manager.py  ai_selector.py  api_cli.py  app.py  cache.py  circuit_breaker.py  config.py  data_quality.py  data_store.py  domain.py  exceptions.py  export_static.py  indexer.py  logging_config.py  repository.py  search.py  search_hybrid.py  search_sqlite.py  seo_utils.py  validation.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py  models.py  observability.py  state.py
src/api/routes/: __init__.py  (+4 more)
src/export/: __init__.py  __main__.py  _utils.py  data.py  export.py  schema.py  seo.py  templates.py
src/repository/: __init__.py  agent_repo.py  users.py
src/security/: __init__.py  markdown.py  rate_limit.py  secrets.py  sql.py  validators.py
src/ui/: __init__.py  app.py  components.py  context.py  data.py  pages.py  session.py  styles.py  user_service.py
static-landing/: index.html
tests/: conftest.py  test_affiliate_manager.py  test_ai_selector.py  test_api.py  test_api_integration.py  test_cache.py  test_circuit_breaker.py  test_concurrency.py  test_config.py  test_data_store.py  test_domain.py  test_e2e.py  test_export_module.py  test_export_seo.py  test_export_static.py  test_indexer.py  test_search.py  test_security.py  test_security_fixes.py  test_security_validators.py  test_webmanus_api.py  test_webmanus_repository.py
tools/: streamlit_app.py
tools/ui/: __init__.py  components.py  context.py  session.py  styles.py
(+14 files in other folders)
