# Agent Navigator - Project Configuration
# Docs: packaging.python.org (pyproject.toml spec)

[project]
name = "agent-navigator"
version = "1.0.0"
description = "Intelligent discovery platform for LLM agent examples"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "agents", "ai", "search", "discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.32.0,<2.0.0",
    "rank-bm25>=0.2.2,<1.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.3.0,<3.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "types-tqdm>=4.65.0",
]

[project.scripts]
agent-nav = "src.app:main"
agent-indexer = "src.indexer:main"
agent-export = "src.export_static:main"
agent-api = "src.api_cli:main"

# Black configuration
[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | site
    | site-test
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "site",
    "site-test",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # Line length handled by formatter (and long strings are OK)
    "S101",   # Use of assert (needed for tests)
    "S311",   # Standard pseudo-random generators
    "B008",   # Function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "site/",
    "site-test/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv", "site", "site-test"]
skips = ["B101"]  # assert_used

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
